--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 .header__logo {
-    margin: 0 1em;
+    margin: 0 1em 0.5em;
     max-width: 50%;
     height: auto;
 }
@@ -104,6 +104,7 @@ button:focus {
 
 .attribution {
     bottom: 0;
+    margin-top: 0.5em;
     font-size: 11px;
     text-align: center;
 }
