--- a/style.css
+++ b/style.css
@@ -194,11 +194,11 @@ button:focus {
     }
 
     .main-container {
-        padding: 0 3em;
+        padding: 0.5em 3em;
     }
 
     .header__logo {
-        margin: 0;
+        margin: 1em;
     }
 
     .container {
